fix(ui): missing drag handle for the table header columns

--- a/src/main/frontend/components/table.css
+++ b/src/main/frontend/components/table.css
@@ -51,8 +51,11 @@
     }
 
     .ls-table-header-cell {
-      @apply overflow-hidden;
       position: relative;
+
+      > .ui__button {
+        @apply overflow-hidden;
+      }
     }
   }
 
