fix(ux): editor blink for the block add-button

--- a/src/main/frontend/components/page.css
+++ b/src/main/frontend/components/page.css
@@ -246,3 +246,13 @@ html.is-native-ios {
     @apply pt-2;
   }
 }
+
+.add-button-link-wrap {
+  @apply invisible;
+}
+
+.show-add-button {
+  .add-button-link-wrap {
+    @apply visible;
+  }
+}
