fix(ui): linking a header in text breaks formatting https://github.com/logseq/db-test/issues/170

--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -276,6 +276,10 @@
         @apply w-5 h-5;
       }
     }
+
+    &.as-inline {
+      @apply inline;
+    }
   }
 
   &:has(.dsl-query), &:has(.embed-page) {
