fix: property textarea auto resize

--- a/src/main/frontend/components/property.css
+++ b/src/main/frontend/components/property.css
@@ -312,7 +312,9 @@ a.control-link {
     }
   }
   .editor-inner {
-    width: 120px;
+    textarea {
+      field-sizing: content;
+    }
   }
 }
 
