fix(ui): images in tables now displayed with bad ratio/stretched https://github.com/logseq/db-test/issues/173

--- a/src/main/frontend/components/table.css
+++ b/src/main/frontend/components/table.css
@@ -1,8 +1,10 @@
 .ls-table {
+  .asset-container {
+    @apply my-1;
+  }
+
   img {
-    max-height: 48px;
-    min-width: 120px;
-    overflow-y: hidden;
+    @apply max-h-[200px] !max-w-[80px] overflow-hidden;
   }
 
   .ls-block {
