--- a/src/main/frontend/ui.css
+++ b/src/main/frontend/ui.css
@@ -324,3 +324,9 @@ input[type='range'] {
     @apply px-2;
   }
 }
+
+.ls-foldable-header {
+  .as-toggle {
+    @apply opacity-60 cursor-pointer select-none active:opacity-50;
+  }
+}
