fix: can't click on slider of recent blocks on desktop

--- a/src/main/frontend/components/header.css
+++ b/src/main/frontend/components/header.css
@@ -327,6 +327,11 @@ html.is-zoomed-native-ios {
   -webkit-app-region: drag;
 }
 
+.recent-slider {
+  user-select: initial;
+  -webkit-app-region: no-drag
+}
+
 /* TODO: remote for prod */
 .theme-container-inner:not(.ls-left-sidebar-open) {
   .cp__header > .l {
