enhance(ui): polish opacity value

--- a/src/main/frontend/components/container.css
+++ b/src/main/frontend/components/container.css
@@ -250,7 +250,7 @@
 
     &.is-expand {
       .header .more {
-        opacity: 1;
+        opacity: .3;
         transform: rotate(-90deg);
       }
 
