fix: limit width for property select value

--- a/src/main/frontend/components/property.css
+++ b/src/main/frontend/components/property.css
@@ -319,6 +319,7 @@ a.control-link {
 }
 
 .property-select {
+  max-width: 600px;
   .menu-link:hover, a.menu-link.chosen {
     .iconTablerExtBacklog {
       @apply text-gray-08;
