enhance(ui): polish graphs picker from the left sidebar

--- a/src/main/frontend/components/repo.css
+++ b/src/main/frontend/components/repo.css
@@ -68,3 +68,21 @@
     items-center gap-1.5 hover:bg-gray-03;
   }
 }
+
+.cp__graphs-selector {
+  > a {
+    @apply flex items-center relative flex-1 overflow-hidden py-1 pr-4 opacity-90 active:opacity-70;
+
+    > .thumb {
+      @apply w-7 h-7 overflow-hidden flex flex-shrink-0 items-center justify-center bg-blue-rx-04 rounded-md;
+    }
+
+    > strong {
+      @apply whitespace-nowrap overflow-hidden text-ellipsis pl-1 font-semibold relative pr-4;
+
+      > .ui__icon {
+        @apply absolute -right-1 top-1 opacity-80;
+      }
+    }
+  }
+}
