--- a/src/main/frontend/components/repo.css
+++ b/src/main/frontend/components/repo.css
@@ -72,7 +72,7 @@
 .cp__graphs-selector {
   > a {
     @apply flex items-center relative flex-1 overflow-hidden
-    pl-0.5 py-1 pr-4 opacity-90 active:opacity-70;
+    pl-1 py-1 pr-4 opacity-90 active:opacity-70;
 
     > .thumb {
       @apply w-6 h-6 overflow-hidden flex flex-shrink-0 items-center
@@ -86,6 +86,14 @@
       > .ui__icon {
         @apply absolute -right-1 top-[3px] opacity-80;
       }
+    }
+  }
+
+  > span {
+    @apply relative flex items-center -mr-1;
+
+    > .ui__button {
+      @apply p-1 opacity-40 hover:opacity-70 active:opacity-100;
     }
   }
 }
