fix(ui): background color for the left sidebar

--- a/src/main/frontend/components/theme.css
+++ b/src/main/frontend/components/theme.css
@@ -156,7 +156,7 @@ main.ls-fold-button-on-right {
 }
 
 main.theme-container-inner {
-  --left-sidebar-bg-color: var(--lx-gray-02, hsl(var(--secondary, var(--rx-gray-03-hsl))));
+  --left-sidebar-bg-color: var(--lx-gray-02, var(--ls-secondary-background-color, hsl(var(--secondary, var(--rx-gray-03-hsl)))));
 }
 
 html[data-font='serif'] .ls-block, .ls-font-serif {
