--- a/src/main/frontend/components/repo.css
+++ b/src/main/frontend/components/repo.css
@@ -76,7 +76,7 @@
 
     > .thumb {
       @apply w-6 h-6 overflow-hidden flex flex-shrink-0 items-center
-      justify-center bg-accent-03-alpha rounded;
+      justify-center bg-accent-03 rounded opacity-80 dark:opacity-50;
     }
 
     > strong {
